--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "enzyme": "^3.11.0",
-    "mocha": "^8.1.3"
+    "enzyme-adapter-react-16": "^1.15.4",
+    "mocha": "^8.1.3",
+    "mocha-jsdom": "^2.0.0"
   }
 }
